--- a/Home_Page.html
+++ b/Home_Page.html
@@ -33,7 +33,11 @@
 
     <div class="content">
       <!-- Bullshit to check for scrolling-->
-      <h1>Welcome to my website</h1>
+      <div id="block1">
+        <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
+        <img src="ie.png" alt="Audrey Gelfand" class="imageright">
+      </div>
+
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
       <br>
