--- a/Home_Page.html
+++ b/Home_Page.html
@@ -17,10 +17,10 @@
         <div class="overlay-content">
           <!-- Links-->
           <a href="Home_Page.html">Home</a>
-          <a href="About_Me.html">About Me</a>
+          <a href="About_Me.html">About</a>
           <a href="Client_Experiences.html">Client Experiences</a>
-          <a href="Resources.html">Helpful Resources</a>
-          <a href="Contanct_Info.html">Contact Me</a>
+          <a href="Resources.html">Resources</a>
+          <a href="Contanct_Info.html">Contact</a>
           <a href="Login.html">Login</a>
         </div>
       </div>
@@ -65,10 +65,10 @@
     <div class="footer-container">
       <div class="footer">
         <div class="footer-info footer-1">
-          <a href="#">Home</a>
-          <a href="#">About Me</a>
-          <a href="#">Client Experiences</a>
-          <a href="#">Helpful Resources</a>
+          <a href="Home_Page.html">Home</a>
+          <a href="About_Me.html">About</a>
+          <a href="Client_Experiences.html">Client Experiences</a>
+          <a href="Resources.html">Resources</a>
         </div>
         <div class="footer-info footer-2">
           <a href="#">Email</a>
@@ -76,6 +76,13 @@
           <a href="#">Location</a>
           <a href="#">Feedback</a>
         </div>
+        <div class="footer-info footer-3">
+          <br>
+          <hr>
+          <br>
+           <a href="#">Accessibility</a>
+           <p style="text-decoration: none; color: pink;">© 2023 Business Name</p>
+         </div>
       </div>
     </div>
 
