--- a/Home_Page.html
+++ b/Home_Page.html
@@ -81,7 +81,7 @@
           <hr>
           <br>
            <a href="#">Accessibility</a>
-           <p style="text-decoration: none; color: pink;">© 2023 Business Name</p>
+           <p style="text-decoration: none;">© 2023 Business Name</p>
          </div>
       </div>
     </div>
