--- a/Home_Page.html
+++ b/Home_Page.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Gelfand_Site.css">
+    <link rel="stylesheet" href="css/Gelfand_Site.css">
     <title>Audrey Gelfand</title>
   </head>
   <body>
@@ -17,11 +17,11 @@
         <div class="overlay-content">
           <!-- Links-->
           <a href="Home_Page.html">Home</a>
-          <a href="About_Me.html">About</a>
-          <a href="Client_Experiences.html">Client Experiences</a>
-          <a href="Resources.html">Resources</a>
-          <a href="Contanct_Info.html">Contact</a>
-          <a href="Login.html">Login</a>
+          <a href="HTML/About_Me.html">About</a>
+          <a href="HTML/Client_Experiences.html">Client Experiences</a>
+          <a href="HTML/Resources.html">Resources</a>
+          <a href="HTML/Contanct_Info.html">Contact</a>
+          <a href="HTML/Login.html">Login</a>
         </div>
       </div>
 
@@ -31,11 +31,15 @@
 
     </nav>
 
+    <div class="intro">
+      
+    </div>
+
     <div class="content">
       <!-- Bullshit to check for scrolling-->
       <div id="block1">
         <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
-        <img src="ie.png" alt="Audrey Gelfand" class="imageright">
+        <img src="images/ie.png" alt="Audrey Gelfand" class="imageright">
       </div>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
@@ -66,9 +70,9 @@
       <div class="footer">
         <div class="footer-info footer-1">
           <a href="Home_Page.html">Home</a>
-          <a href="About_Me.html">About</a>
-          <a href="Client_Experiences.html">Client Experiences</a>
-          <a href="Resources.html">Resources</a>
+          <a href="HTML/About_Me.html">About</a>
+          <a href="HTML/Client_Experiences.html">Client Experiences</a>
+          <a href="HTML/Resources.html">Resources</a>
         </div>
         <div class="footer-info footer-2">
           <a href="#">Email</a>
