image and footer changes

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -32,15 +32,23 @@
     </nav>
 
     <div class="intro">
-      
+      <h1>Welcome to our therapy center!</h1>
+      <p>We offer a variety of therapeutic services to help you achieve well-being.</p>
     </div>
+
+    <div id="block1">
+      <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
+      <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
+    </div>
+
+    <div id="block2">
+      <p class="block2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
+      <img src="images/faketherapy.jpg" alt="Audrey G" class="imageleft">
+    </div>
+    
 
     <div class="content">
       <!-- Bullshit to check for scrolling-->
-      <div id="block1">
-        <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
-        <img src="images/ie.png" alt="Audrey Gelfand" class="imageright">
-      </div>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.</p>
@@ -68,6 +76,9 @@
 
     <div class="footer-container">
       <div class="footer">
+        <div class="imagefooter">
+          <img src="images/faketherapy.jpg" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
+        </div>
         <div class="footer-info footer-1">
           <a href="Home_Page.html">Home</a>
           <a href="HTML/About_Me.html">About</a>
