colors and images

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -27,7 +27,7 @@
 
       <span onclick="openLinks()">&#9776;</span>
       <!-- home link -->
-      <p><a href="Home_Page.html" style="color: black"> Business Name Here </a></p>
+      <img src="/images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"><a href="Home_Page.html"></a></img>
 
     </nav>
 
@@ -37,10 +37,6 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <center><h1>Welcome to our therapy center!</h1>
-        <p>We offer a variety of therapeutic services to help you achieve well-being.</p></center>
       </div>
     </div>
 
@@ -65,7 +61,7 @@
     <div class="footer-container">
       <div class="footer">
         <div class="imagefooter">
-          <img src="images/faketherapy.jpg" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
+          <img src="images/AGTransparent.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
         </div>
         <div class="footer-info footer-1">
           <a href="Home_Page.html">Home</a>
@@ -80,9 +76,6 @@
           <a href="#">Feedback</a>
         </div>
         <div class="footer-info footer-3">
-          <br>
-          <br>
-          <br>
            <a href="#">Accessibility</a>
            <p style="text-decoration: none;">© 2023 Business Name</p>
          </div>
