descriptions for links

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -41,17 +41,20 @@
     </div>
 
     <div id="block1">
-      <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.              <button type="button" class="button">About Me</button></p>
+      <p class="block1"> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audredy Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the link below to learn more about Dr. x x's background and approach.
+        <button type="button" class="button">About Me</button></p>
       <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
     </div>
 
     <div id="block2">
-      <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.              <button type="button" class="button">Client Page</button></p>
+      <p class="block1">Patients come to me from all walks of life. I treat people of all ages. When patients are too young to come to therapy, I often work on a consultation model where I will work with caregivers instead of directly working with the patient. I treat people with many different emotional and behavioral challenges.
+        <button type="button" class="button">Client Experiences</button></p>
       <img src="images/faketherapy.jpg" alt="Audrey G" class="imageleft">
     </div>
 
     <div id="block3">
-      <p class="block1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod lacus id feugiat pulvinar. Donec ullamcorper mauris enim, ut pellentesque mauris consectetur vel. Nam pellentesque justo nec turpis scelerisque, nec tincidunt est scelerisque. Nulla facilisi. Nulla bibendum eros id erat luctus lobortis.              <button type="button" class="button">Google Map</button></p>
+      <p class="block1">As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.
+        <button type="button" class="button">Resources</button></p>
       <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
     </div>
     
