--- a/Home_Page.html
+++ b/Home_Page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/Gelfand_Site.css">
     <title>Audrey Gelfand</title>
   </head>
@@ -40,23 +40,73 @@
       </div>
     </div>
 
-    <div id="block1">
-      <p class="block1"> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audredy Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the link below to learn more about Dr. x x's background and approach.
-        <button type="button" class="button">About Me</button></p>
-      <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
+    <div class="container-blocks">
+      <div id="block1">
+        <div class="block1-content">
+          <h2> An experienced Clinical Psychologist </h2>
+          <br>
+          <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the link below to learn more about Dr. Audrey Gelfands background and approach.
+            <br>
+            <button type="button" class="button">About Me</button>
+          </p>
+        </div>
+        <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
+      </div>
+
+      <div class="block2">
+        <div class="box1">
+          <div class="box1-image">
+            <img src="images/faketherapy.jpg" alt="box1">
+          </div>
+          <div class="box1-content">
+            <span> x x x x </span>
+            <a href="#" class="box1-title">Something</a>
+            <p> xxxxxx xxxxxxxxxxxxxxxx</p>
+
+            <a href="#"> read more </a>
+          </div>
+        </div>
+
+        <div class="box1">
+          <div class="box1-image">
+            <img src="images/faketherapy.jpg" alt="box1">
+          </div>
+          <div class="box1-content">
+            <span> x x x x </span>
+            <a href="#" class="box1-title">Something</a>
+            <p> xxxxxx xxxxxxxxxxxxxxxx</p>
+
+            <a href="#"> read more </a>
+          </div>
+        </div>
+
+
+        <div class="box1">
+          <div class="box1-image">
+            <img src="images/faketherapy.jpg" alt="box1">
+          </div>
+          <div class="box1-content">
+            <span> x x x x </span>
+            <a href="#" class="box1-title">Something</a>
+            <p> xxxxxx xxxxxxxxxxxxxxxx</p>
+
+            <a href="#"> read more </a>
+          </div>
+        </div>
+      </div>
+
+      <div id="block3">
+        <div class="block3-content">
+          <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the link below to learn more about Dr. Audrey Gelfands background and approach.
+            <br>
+            <button type="button" class="button">About Me</button>
+          </p>
+        </div>
+        <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageleft">
+      </div>
     </div>
 
-    <div id="block2">
-      <p class="block1">Patients come to me from all walks of life. I treat people of all ages. When patients are too young to come to therapy, I often work on a consultation model where I will work with caregivers instead of directly working with the patient. I treat people with many different emotional and behavioral challenges.
-        <button type="button" class="button">Client Experiences</button></p>
-      <img src="images/faketherapy.jpg" alt="Audrey G" class="imageleft">
-    </div>
 
-    <div id="block3">
-      <p class="block1">As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.
-        <button type="button" class="button">Resources</button></p>
-      <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
-    </div>
     
 
     <div class="content">
