--- a/Home_Page.html
+++ b/Home_Page.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/Gelfand_Site.css">
+    <link rel="stylesheet" href="css/media.css">
     <title>Audrey Gelfand</title>
   </head>
   <body>
