--- a/Home_Page.html
+++ b/Home_Page.html
@@ -131,7 +131,7 @@
         </div>
         <div class="footer-info footer-3">
            <a href="#">Accessibility</a>
-           <p style="text-decoration: none;">© 2023 Business Name</p>
+           <p style="text-decoration: none;">© 2023 Audrey Gelfand PH.D</p>
          </div>
       </div>
     </div>
