--- a/Home_Page.html
+++ b/Home_Page.html
@@ -98,9 +98,9 @@
 
       <div id="block3">
         <div class="block3-content">
-          <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the link below to learn more about Dr. Audrey Gelfands background and approach.
+          <p> As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.
             <br>
-            <button type="button" class="button">About Me</button>
+            <button type="button" class="button"> Helpful Resources </button>
           </p>
         </div>
         <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageleft">
