information and colors

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -73,11 +73,11 @@
             <img src="images/faketherapy.jpg" alt="box1">
           </div>
           <div class="box1-content">
-            <span> x x x x </span>
-            <a href="#" class="box1-title">Something</a>
-            <p> xxxxxx xxxxxxxxxxxxxxxx</p>
-
-            <a href="#"> read more </a>
+            <a href="/HTML/About_Me.html" class="box1-title" style="text-decoration: none;"> My Approach: </a>
+            <p> " Patients come to me from all walks of life. I treat people of all ages. When patients are too young to come to therapy, I often work on a consultation model where I will work with caregivers instead of directly working with the patient. I treat people with many different emotional and behavioral challenges "</p>
+            <span> - Dr. Gelfand </span>
+            <br>
+            <a href="/HTML/About_Me.html"> Learn More About My Approach </a>
           </div>
         </div>
 
@@ -87,11 +87,11 @@
             <img src="images/faketherapy.jpg" alt="box1">
           </div>
           <div class="box1-content">
-            <span> x x x x </span>
-            <a href="#" class="box1-title">Something</a>
-            <p> xxxxxx xxxxxxxxxxxxxxxx</p>
-
-            <a href="#"> read more </a>
+            <a href="/HTML/Client_Experiences.html" class="box1-title" style="text-decoration: none;"> Client Testimonials: </a>
+            <p> " I feel very fortunate to have Dr. Gelfand as my therapist. She is very kind, knowledgeable, resourceful, and professional and she has helped me a great deal. I would recommend her in a heartbeat." </p>
+            <span> - J.L. </span>
+            <br>
+            <a href="/HTML/Client_Experiences.html"> More Success Stories </a>
           </div>
         </div>
       </div>
