more small changes

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -75,7 +75,7 @@
               <img src="images/faketherapy.jpg" alt="box1">
             </div>
             <div class="box1-content">
-              <a href="https://www.therapyportal.com/p/audreygelfand/" class="box1-title">Portal Link</a>
+              <a href="https://www.therapyportal.com/p/audreygelfand/" class="box1-title" style="text-decoration: none;">Portal Link:</a>
               <br>
               <p> This will take you to the portal page where you can go to login. Here you can check you bill, upcoming appointments, or reschedule.</p>
               <br>
