--- a/Home_Page.html
+++ b/Home_Page.html
@@ -62,6 +62,7 @@
           <br>
           <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the button below to learn more about Dr. Audrey Gelfand's background and approach.
             <br>
+            <br>
             <button type="button" class="button" onclick="redirectToAboutMe()">About Me</button>
           </p>
         </div>
@@ -117,7 +118,8 @@
           <br>
           <p> As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.
             <br>
-            <button type="button" class="button"> Helpful Resources </button>
+            <br>
+            <button type="button" class="button" onclick="redirectToResources()"> Helpful Resources </button>
           </p>
         </div>
         <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageleft">
@@ -204,9 +206,15 @@
 
       /* button redirect for body*/
       function redirectToAboutMe() {
-      // Redirect to the desired page
-      window.location.href = "HTML/About_Me.html";
-  }
+        // Redirect to the desired page
+        window.location.href = "HTML/About_Me.html";
+      }
+
+      /* button 2 redirect for body*/
+      function redirectToResources() {
+        // Redirect to the desired page
+        window.location.href = "HTML/Resources.html";
+      }
 
     </script>
       
