button for block changes. font and padding

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -19,7 +19,7 @@
           <!-- Links-->
           <a href="Home_Page.html">Home</a>
           <a href="HTML/About_Me.html">About</a>
-          <a href="HTML/Client_Experiences.html">Client Experiences</a>
+          <a href="HTML/Client_Experiences.html">Reviews</a>
           <a href="HTML/Resources.html">Resources</a>
           <a href="HTML/Contanct_Info.html">Contact</a>
           <a href="HTML/Login.html">Login</a>
@@ -63,7 +63,7 @@
           <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the button below to learn more about Dr. Audrey Gelfand's background and approach.
             <br>
             <br>
-            <button type="button" class="button" onclick="redirectToAboutMe()">About Me</button>
+            <button type="button" class="button" onclick="redirectToAboutMe()">About Dr. Gelfand</button>
           </p>
         </div>
         <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
