--- a/Home_Page.html
+++ b/Home_Page.html
@@ -34,16 +34,16 @@
 
     <div class="slideshow-container">
       <div class="Slides fade">
-        <img src="images/AG.jpg">
+        <img src="images/AG.jpg" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
-        <img src="images/AGBig.JPG">
+        <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
-        <img src="images/ie.png">
+        <img src="images/ie.png" style="width: 100%; height: 400px">
       </div>
     </div>
-    <br>
+    <br>  
     
       
     <div style="text-align:center">
