maps to box and resources to block3

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -75,11 +75,11 @@
             <img src="images/faketherapy.jpg" alt="box1">
           </div>
           <div class="box1-content">
-            <a href="HTML/Resources.html" class="box1-title" style="text-decoration: none;"> Helpful Resources </a>
-            <p>As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.</p>
-            <span> Click on the link below to access some helpful links</span>
+            <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-title" style="text-decoration: none;"> Location </a>
+            <p>This is a google maps link that will give you the location of my office. This link will also show you the many shops in the area.</p>
+            <span> Click on the google maps link bellow to find my office</span>
             <br>
-            <a href="HTML/Resources.html"> Resources before or after visit </a>
+            <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu"> Location of Office </a>
           </div>
         </div>
 
@@ -114,12 +114,13 @@
 
       <div id="block3">
         <div class="block3-content">
-          <h2><a class="url" style="text-decoration: none;" href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu">Location</a></h2>
+          <h2> Trusted reliable resources </h2>
           <br>
-          <p> Bellow is a link to my office. This link is a google maps link, that will give you the exact address of my office as well as the surrounding area. If this is to far for you, but are still whilling to work with me, I am able to do zoom meetings and or facetime.</p>
+          <p> As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.</p>
             <br>
             <br>
-            <a class="url" href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu">Google Maps Link of Office</a>
+            <button type="button" class="button" onclick="redirectToResources()"> Helpful Resources </button>
+          </p>
         </div>
         <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageleft">
       </div>
