--- a/Home_Page.html
+++ b/Home_Page.html
@@ -72,10 +72,10 @@
       <div class="block2">
         <div class="box1">
           <div class="box1-image">
-            <img src="images/faketherapy.jpg" alt="box1">
+            <img src="images/location.png" alt="box1" style="height: 200px;">
           </div>
           <div class="box1-content">
-            <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-title" style="text-decoration: none;"> Location </a>
+            <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" class="box1-title" style="text-decoration: none;"> My Office </a>
             <p>This is a google maps link that will give you the location of my office. This link will also show you the many shops in the area.</p>
             <span> Click on the google maps link bellow to find my office</span>
             <br>
@@ -143,14 +143,14 @@
           <a href="HTML/Resources.html">Resources</a>
         </div>
         <div class="footer-info footer-2">
-          <a href="#">Email</a>
-          <a href="#">Phone Number</a>
-          <a href="#">Location</a>
+          <a href="mailto: audreygelfand@gmail.com">Email</a>
+          <a href="tel:914-282-8705">Telephone</a>
+          <a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu">My Office</a>
           <a href="#">Feedback</a>
         </div>
         <div class="footer-info footer-3">
            <a href="#">Accessibility</a>
-           <p style="text-decoration: none;">© 2023 Audrey Gelfand PH.D</p>
+           <p style="text-decoration: none;">© 2023 Audrey Gelfand PH.D.</p>
          </div>
       </div>
     </div>
