started contact page

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -58,7 +58,7 @@
     <div class="container-blocks">
       <div id="block1">
         <div class="block1-content">
-          <h2> An experienced Clinical Psychologist </h2>
+          <h2> An Experienced Clinical Psychologist </h2>
           <br>
           <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the button below to learn more about Dr. Audrey Gelfand's background and approach.
             <br>
