--- a/Home_Page.html
+++ b/Home_Page.html
@@ -63,7 +63,7 @@
           <p> Dr. Audrey Gelfand is an experienced Clinical Psychologist specializing in cognitive behavioral therapy. With over 25 years of practice, Dr. Audrey Gelfand offers individualized treatment, focusing on strengths and utilizing natural support systems. Build a trusting relationship with an empathetic therapist to bring about positive change. Click the button below to learn more about Dr. Audrey Gelfand's background and approach.
             <br>
             <br>
-            <button type="button" class="button" onclick="redirectToAboutMe()">About Dr. Gelfand</button>
+            <button type="button" class="button1" onclick="redirectToAboutMe()">About Dr. Gelfand</button>
           </p>
         </div>
         <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
@@ -119,7 +119,7 @@
           <p> As a licensed physician, I'm here to provide you with trusted guidance for your health concerns. Explore the following resources to help you keep your symptoms under control and improve your well-being. Click the link below for more information.</p>
             <br>
             <br>
-            <button type="button" class="button" onclick="redirectToResources()"> Helpful Resources </button>
+            <button type="button" class="button2" onclick="redirectToResources()"> Helpful Resources </button>
           </p>
         </div>
         <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageleft">
@@ -208,6 +208,10 @@
       function redirectToAboutMe() {
         // Redirect to the desired page
         window.location.href = "HTML/About_Me.html";
+      }
+
+      function redirectToResources(){
+        window.location.href = "HTML/Resources.html";
       }
 
     </script>
