color pallet changes new colors in txt 07/02/23

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -34,13 +34,13 @@
 
     <div class="slideshow-container">
       <div class="Slides fade">
-        <img src="images/AG.jpg" style="width: 100%; height: 400px">
+        <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
         <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
       </div>
       <div class="Slides fade">
-        <img src="images/ie.png" style="width: 100%; height: 400px">
+        <img src="images/AGBig.JPG" style="width: 100%; height: 400px">
       </div>
     </div>
     <br>  
