contact page css

--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -44,16 +44,22 @@
         </div>
 
         <div class="contact-us-box">
-            <p> Location: <a href="mailto: audreygelfand@gmail.com">audreygelfand@gmail.com</a> </p>
+            <p><a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" style="text-decoration: none;">87 Dalmeny Rd, Briarcliff Manor, NY 10510</a></p>
             <br>
-            <p> Phone: <a href="mailto: audreygelfand@gmail.com">audreygelfand@gmail.com</a> </p>
+            <p><a href="tel:914-282-8705" style="text-decoration: underline; color: #335e7e; font-size:larger;">914-282-8705</a></p>
             <br>
-            <p> Email: <a href="mailto: audreygelfand@gmail.com">audreygelfand@gmail.com</a> </p>
+            <p><a href="mailto:audreygelfand@gmail.com" style="text-decoration: underline; color: #335e7e; font-size:larger;">audreygelfand@gmail.com</a></p>
         </div>
+        
+
+
         <div class="contact-form-container">
             <form class="contact-form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
+
+                <label for="last-name">Last Name:</label>
+                <input type="text" id="last-name" name="last-name" required>
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
@@ -64,6 +70,7 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
+
 
 
 
