contact us mostly done

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="css/about_me.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="../css/about_me.css">
+    <link rel="stylesheet" href="../css/media.css">
     <title>Audrey Gelfand</title>
   </head>
   <body>
@@ -17,18 +17,18 @@
 
         <div class="overlay-content">
           <!-- Links-->
-          <a href="Home_Page.html">Home</a>
-          <a href="HTML/Contanct_Info.html">Contact</a>
-          <a href="HTML/About_Me.html">About</a>
-          <a href="HTML/Resources.html">Resources</a>
-          <a href="HTML/Client_Experiences.html">Reviews</a>
-          <a href="HTML/Login.html">Login</a>
+          <a href="../Home_Page.html">Home</a>
+          <a href="Contanct_Info.html">Contact</a>
+          <a href="About_Me.html">About</a>
+          <a href="Resources.html">Resources</a>
+          <a href="Client_Experiences.html">Reviews</a>
+          <a href="Login.html">Login</a>
         </div>
       </div>
 
       <span onclick="openLinks()">&#9776;</span>
       <!-- home link -->
-      <img src="images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"><a href="Home_Page.html"></a></img>
+      <img src="../images/AGTransparentCrop.png" style="height: 50px; width: 50px; margin: 15px;"><a href="Home_Page.html"></a></img>
 
     </nav>
 
@@ -53,7 +53,7 @@
           Therapy is very challenging and can feel daunting to new patients, however, in a supportive environment, it is extremely helpful. 
           I am very grateful to those people who put their trust in me. </p>
         </div>
-        <img src="images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
+        <img src="../images/faketherapy.jpg" alt="Audrey Gelfand" class="imageright">
       </div>
     </div>
 
@@ -94,13 +94,13 @@
       <div class="footer-container">
         <div class="footer">
           <div class="imagefooter">
-            <img src="images/AGTransparent.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
+            <img src="../images/AGTransparent.png" alt="logo2" class="logoFooter" style="height: 80px; flex-direction: column; margin-right: 4rem;">
           </div>
           <div class="footer-info footer-1">
-            <a href="Home_Page.html">Home</a>
-            <a href="HTML/About_Me.html">About</a>
-            <a href="HTML/Client_Experiences.html">Client Experiences</a>
-            <a href="HTML/Resources.html">Resources</a>
+            <a href="../Home_Page.html">Home</a>
+            <a href="About_Me.html">About</a>
+            <a href="Client_Experiences.html">Client Experiences</a>
+            <a href="Resources.html">Resources</a>
           </div>
           <div class="footer-info footer-2">
             <a href="mailto: audreygelfand@gmail.com">Email</a>
