minor changes. starting client experiences page

--- a/HTML/About_Me.html
+++ b/HTML/About_Me.html
@@ -21,7 +21,7 @@
           <a href="Contanct_Info.html">Contact</a>
           <a href="About_Me.html">About</a>
           <a href="Resources.html">Resources</a>
-          <a href="Client_Experiences.html">Reviews</a>
+          <a href="Client_Experiences.html">Client Experiences</a>
           <a href="Login.html">Login</a>
         </div>
       </div>
