--- a/HTML/Contanct_Info.html
+++ b/HTML/Contanct_Info.html
@@ -21,7 +21,7 @@
                 <a href="Contanct_Info.html">Contact</a>
                 <a href="About_Me.html">About</a>
                 <a href="Resources.html">Resources</a>
-                <a href="Client_Experiences.html">Reviews</a>
+                <a href="Client_Experiences.html">Client Experiences</a>
                 <a href="Login.html">Login</a>
             </div>
             </div>
@@ -46,7 +46,7 @@
         <div class="contact-us-box">
             <p><a href="https://www.google.com/maps/place/Audrey+R.+Gelfand,+PHD/@41.1458359,-73.8390587,17z/data=!3m1!4b1!4m6!3m5!1s0x89c2bf6148a65617:0x945021abdc9225ed!8m2!3d41.1458359!4d-73.8364838!16s%2Fg%2F1tdcy04p?entry=ttu" style="text-decoration: underline; color: #335e7e; font-size:medium;">87 Dalmeny Rd, Briarcliff Manor, NY 10510</a></p>
             <br>
-            <p><a href="tel:914-282-8705" style="text-decoration: underline; color: #335e7e; font-size:larger;">914-282-8705</a></p>
+            <p><a href="tel:914-282-8705" style="text-decoration: underline; color: #335e7e; font-size:larger;">(914)282-8705</a></p>
             <br>
             <p><a href="mailto:audreygelfand@gmail.com" style="text-decoration: underline; color: #335e7e; font-size:larger;">audreygelfand@gmail.com</a></p>
         </div>
@@ -115,7 +115,7 @@
                 document.getElementById("Quick_Links").style.height = "0%";
             }
         
-            /*betterhelp scrolling header checks if user scrolling*/
+            /*header checks if user scrolling*/
             window.addEventListener('scroll', function() 
             {
                 var headerBlock = document.getElementById('headerBlock');
