--- a/Home_Page.html
+++ b/Home_Page.html
@@ -21,7 +21,7 @@
           <a href="HTML/Contanct_Info.html">Contact</a>
           <a href="HTML/About_Me.html">About</a>
           <a href="HTML/Resources.html">Resources</a>
-          <a href="HTML/Client_Experiences.html">Reviews</a>
+          <a href="HTML/Client_Experiences.html">Client Experiences</a>
           <a href="HTML/Login.html">Login</a>
         </div>
       </div>
@@ -166,7 +166,7 @@
         document.getElementById("Quick_Links").style.height = "0%";
       }
 
-      /*betterhelp scrolling header checks if user scrolling*/
+      /*header checks if user scrolling*/
       window.addEventListener('scroll', function() 
       {
         var headerBlock = document.getElementById('headerBlock');
