client page progress

--- a/Home_Page.html
+++ b/Home_Page.html
@@ -22,7 +22,7 @@
           <a href="HTML/About_Me.html">About</a>
           <a href="HTML/Resources.html">Resources</a>
           <a href="HTML/Client_Experiences.html">Client Experiences</a>
-          <a href="HTML/Login.html">Login</a>
+          <a href="HTML/Login.html">Patient Portal</a>
         </div>
       </div>
 
